<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Applications -->
    <string name="app_name">Amazon Payments</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_bill_split_calculator">Bill Split Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="next_button">Next</string>
    
    
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>

    <!-- Main Activity -->
    <string name="button_pay_send_money">Pay/Send Money</string>
    <string name="button_bill_split">Split a Bill</string>
    
    <!-- Bill Split Calculator -->
    <string name="billTotal">Bill total:</string>
    <string name="tip">Tip:</string>
    <string name="total">Total:</string>
    <string name="zero">0.00</string>
    <string name="custom">Custom:</string>
    <string name="title_activity_activity_send">Review Split</string>
    <string name="confirm_split_button">Confirm Split</string>
    <string name="list_of_friends">Friends to split with</string>

    <string name="title_activity_add_friends">Add Friends</string>

    <string name="button_scan_bill">Scan Bill / Auto-Itemize</string>
    <string name="add_friends">Add Friends</string>
</resources>