<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.billsplitapp.BillSplitCalculatorActivity$PlaceholderFragment" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/billCalcTableLayout"
		android:padding="5dp"
		android:stretchColumns="1,2,3">
		
        <!-- Table Row 0 -->
        <TableRow
            android:id="@+id/billCalcTableRow0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/billTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/billTotal"
                android:textColor="#000" >
            </TextView>

            <EditText
                android:id="@+id/billEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:layout_weight="1"
                android:inputType="numberDecimal" >
            </EditText>

        </TableRow>

        <!-- Table Row 1 -->
        <TableRow
            android:id="@+id/billCalcTableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tenTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:gravity="center"
                android:text="10%"
                android:textColor="#000" >
            </TextView>

            <TextView
                android:id="@+id/fifteenTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="15%"
                android:textColor="#000" >
            </TextView>

            <TextView
                android:id="@+id/twentyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="20%"
                android:textColor="#000"
                android:layout_weight="1" >
            </TextView>
		</TableRow>

        <!-- Table Row 2 -->
        <TableRow
            android:id="@+id/billCalcTableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tipTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/tip"
                android:textColor="#000" >
            </TextView>

            <EditText
                android:id="@+id/tip10EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="14sp" >
            </EditText>
            
            <EditText
                android:id="@+id/tip15EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="14sp" >
            </EditText>
            
            <EditText
                android:id="@+id/tip20EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="14sp" >
            </EditText>
            
        </TableRow>

        <!-- Table Row 3 -->
        <TableRow
            android:id="@+id/billCalcTableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/total"
                android:textColor="#000" >
            </TextView>

            <EditText
                android:id="@+id/total10EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="14sp" >
            </EditText>
            
            <EditText
                android:id="@+id/total15EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="14sp" >
            </EditText>
            
            <EditText
                android:id="@+id/total20EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="14sp" >
            </EditText>
            
        </TableRow>
        
        <!-- Table Row 4 -->
        <TableRow 
            android:id="@+id/billCalcTableRow4"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
            
            <TextView
                android:id="@+id/customTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="5dp"
                android:gravity="right|center_vertical"
                android:text="@string/custom"
                android:textColor="#000"
                android:focusable="false" >
            </TextView>                
            
            <Seekbar 
                android:id="@+id/customSeekBar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_span="2"
                android:progress="18"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="5dp"
                android:layout_weight="1" >
            </Seekbar>
            
            <TextView
                android:id="@+id/customTipTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
				android:text="18%"
				android:textColor="#000"
				android:gravity="center_vertical"
				android:paddingLeft="5dp"
				android:paddingBottom="5dp"
				android:focusable="false" >
            </TextView>
            
        </TableRow>
    </TableLayout>

</RelativeLayout>
